--- a/Transformer/etl_raw_to_silver.ipynb
+++ b/Transformer/etl_raw_to_silver.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7af25c49-0682-4c1c-bb5e-b6657522acad",
    "metadata": {},
    "outputs": [],
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "71f13f1c-3096-456e-a464-86fb95fe8345",
    "metadata": {},
    "outputs": [],
@@ -106,15 +106,14 @@
     "        return None\n",
     "    return str(x).strip().lower()\n",
     "\n",
-    "def to_bool_yesno(x):\n",
-    "    if pd.isna(x):\n",
-    "        return None\n",
-    "    s = str(x).strip().lower()\n",
-    "    if s in {\"true\"}:\n",
+    "def to_bool(value):\n",
+    "    # Mapeamento lógico\n",
+    "    if value in ['yes', 'Yes', 'true', 'True', '1', 'current','Current', 'former','Former', 'sim', 'Sim']:\n",
     "        return True\n",
-    "    if s in {\"false\"}:\n",
+    "    if value in ['no', 'No', 'false', 'False', '0', 'never', 'Nerver', 'não', 'Não', 'nao', 'Nao']:\n",
     "        return False\n",
-    "    return None\n",
+    "        \n",
+    "    return None # Ou um valor padrão\n",
     "\n",
     "def filter_by_quantiles(df, cols, q_low=0.01, q_high=0.99):\n",
     "    out = df.copy()\n",
@@ -137,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 3,
    "id": "806e2159-6c9d-43b1-8185-91d34535cdb1",
    "metadata": {},
    "outputs": [],
@@ -147,9 +146,19 @@
     "# Seleção e conversão inicial (Em memória)\n",
     "df = df[[c for c in RAW_COLS if c in df.columns]].copy()\n",
     "numeric_cols = [\n",
-    "    \"age\", \"perceived_stress_score\", \"self_reported_happiness\", \"user_engagement_score\",\n",
-    "    \"daily_active_minutes_instagram\", \"time_on_feed_per_day\", \"time_on_reels_per_day\",\n",
-    "    \"sessions_per_day\", \"average_session_length_minutes\", \"ads_viewed_per_day\", \"ads_clicked_per_day\"\n",
+    "\"exercise_hours_per_week\",\n",
+    "\"sleep_hours_per_night\",\n",
+    "\"body_mass_index\",\n",
+    "\"weekly_work_hours\",\n",
+    "\"volunteer_hours_per_month\",\n",
+    "\"daily_active_minutes_instagram\",\n",
+    "\"time_on_feed_per_day\",\n",
+    "\"time_on_explore_per_day\",\n",
+    "\"time_on_messages_per_day\",\n",
+    "\"time_on_reels_per_day\",\n",
+    "\"notification_response_rate\",\n",
+    "\"average_session_length_minutes\",\n",
+    "\"user_engagement_score\"\n",
     "]\n",
     "df[numeric_cols] = df[numeric_cols].apply(pd.to_numeric, errors=\"coerce\")"
    ]
@@ -164,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "4b8a032f-4a9e-4cac-b73c-6356b3c80bb7",
    "metadata": {},
    "outputs": [],
@@ -175,9 +184,11 @@
     "        df[col] = df[col].apply(norm_lower)\n",
     "\n",
     "\n",
-    "if 'has_children' in df.columns:\n",
-    "    df['has_children'] = df['has_children'].apply(to_bool_yesno)\n",
-    "\n",
+    "cols_bool = ['has_children', 'smoking', 'uses_premium_features', 'two_factor_auth_enabled', 'biometric_login_used']\n",
+    "for col in cols_bool:\n",
+    "    if col in df.columns:\n",
+    "        df[col] = df[col].apply(to_bool)\n",
+    "        \n",
     "cols_to_filter = ['daily_active_minutes_instagram', 'ads_clicked_per_day', 'average_session_length_minutes']\n",
     "df = filter_by_quantiles(df, cols_to_filter)"
    ]
@@ -194,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "id": "9d0134e4-f2ff-4d59-9590-1deb1d026fd2",
    "metadata": {},
    "outputs": [
