--- a/Transformer/etl_silver_to_gold.ipynb
+++ b/Transformer/etl_silver_to_gold.ipynb
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "f5729bb4",
    "metadata": {},
    "outputs": [
@@ -338,7 +338,10 @@
       "   -> Inseridos 1506286 registros em DIM_ETL_VDA\n",
       "   -> Inseridos 315973 registros em DIM_CNT\n",
       "   -> Inseridos 48 registros em DIM_ITR\n",
-      "   -> Inseridos 1506286 registros em FT_ADS_PRF\n"
+      "   -> Inseridos 1506286 registros em FT_ADS_PRF\n",
+      "   -> Inseridos 1506286 registros em FT_ENG_APP\n",
+      "\n",
+      "SUCESSO! Carga ETL concluída. O Data Warehouse está atualizado.\n"
      ]
     }
    ],
