--- a/Transformer/etl_silver_to_gold.ipynb
+++ b/Transformer/etl_silver_to_gold.ipynb
@@ -40,12 +40,15 @@
     "import psycopg2\n",
     "from psycopg2.extras import execute_batch\n",
     "import numpy as np\n",
+    "import warnings\n",
     "\n",
+    "warnings.filterwarnings('ignore', category=UserWarning, message='.*SQLAlchemy.*')\n",
+    "     \n",
     "# --- CONFIGURAÇÕES DE CONEXÃO ---\n",
     "DB_HOST = \"localhost\"\n",
     "DB_NAME = \"instagram_usage\"\n",
     "DB_USER = \"sbd2\"\n",
-    "DB_PASS = \"sbd2123\"  # <--- Verifique sua senha\n",
+    "DB_PASS = \"sbd2123\"  \n",
     "\n",
     "# Schemas\n",
     "SILVER_SCHEMA = \"silver\"\n",
@@ -70,19 +73,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_183336/511765966.py:6: UserWarning: pandas only supports SQLAlchemy connectable (engine/connection) or database string URI or sqlite3 DBAPI2 connection. Other DBAPI2 objects are not tested. Please consider using SQLAlchemy.\n",
-      "  df_silver = pd.read_sql(query, conn)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✅ Dados carregados da camada Silver com sucesso!\n",
-      "   Registros: 1506286 | Colunas: 58\n"
+      "Dados carregados da camada Silver com sucesso!\n",
+      " Registros: 1506286 | Colunas: 58\n"
      ]
     }
    ],
@@ -128,11 +123,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# --- 2.1 Dicionários de Mapeamento (Nomenclatura Padrão) ---\n",
+    "# --- 2.1 Dicionários de Mapeamento  ---\n",
     "\n",
     "# Mapeamento: Usuário\n",
     "map_usuario = {\n",
-    "    'sk_usuario': 'SRK_USR', 'user_id': 'SRK_USR', # user_id original será a chave\n",
+    "    'sk_usuario': 'SRK_USR', 'user_id': 'SRK_USR', \n",
     "    'age': 'AGE_USR', 'gender': 'GEN_USR', 'country': 'CTR_USR',\n",
     "    'urban_rural': 'URB_RRL', 'education_level': 'EDU_LVL',\n",
     "    'employment_status': 'EMP_STS', 'income_level': 'INC_LVL',\n",
@@ -210,7 +205,6 @@
     "# --- 2.2 Geração das Tabelas Dimensão ---\n",
     "\n",
     "# 1. DIM_USR (Dimensão Usuário)\n",
-    "# Estratégia: Usar o próprio user_id original como Chave Substituta (SRK)\n",
     "cols_attrs_usuario = ['age', 'gender', 'country', 'urban_rural', 'income_level', \n",
     "                      'employment_status', 'education_level', 'relationship_status', 'has_children']\n",
     "\n",
